descheduler/service.yml
kind: Service
apiVersion: v1
metadata:
  namespace: wakashiyo
  name: wakashiyo-service
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 8080
      targetPort: 80
