descheduler/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: wakashiyo
  name: wakashiyo-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: wakashiyo-service
              servicePort: 8080
